--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -8,8 +8,7 @@ on:
 
 jobs:
   checks:
-    if: github.repository == 'NFDI4Chem/knowledge_base'
-    if: github.event_name != 'push'
+    if: github.repository == 'NFDI4Chem/knowledge_base' && github.event_name != 'push'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
@@ -27,8 +26,7 @@ jobs:
           fi
           npm run build
   gh-release:
-    if: github.repository == 'NFDI4Chem/knowledge_base'
-    if: github.event_name != 'pull_request'
+    if: github.repository == 'NFDI4Chem/knowledge_base' && github.event_name != 'pull_request'
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v1
