--- a/package.json
+++ b/package.json
@@ -23,6 +23,11 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1"
   },
+  "browser": {
+  "fs": false,
+  "path": false,
+  "os": false
+  },
   "browserslist": {
     "production": [
       ">0.5%",
