--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "npm": "^8.19.1",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "markdown-tables-to-json": "^0.1.7"
   },
   "browser": {
   "fs": false,
