--- a/package.json
+++ b/package.json
@@ -23,13 +23,12 @@
     "npm": "^8.19.1",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1",
-    "markdown-tables-to-json": "^0.1.7"
+    "react-dom": "^17.0.1"
   },
   "browser": {
-  "fs": false,
-  "path": false,
-  "os": false
+    "fs": false,
+    "path": false,
+    "os": false
   },
   "browserslist": {
     "production": [
