--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@docusaurus/preset-classic": "^2.2.0",
     "@easyops-cn/docusaurus-search-local": "^0.24.1",
     "@mdx-js/react": "^1.6.21",
+    "@fontsource/ibm-plex-sans": "latest",
     "clsx": "^1.1.1",
     "i": "^0.3.7",
     "npm": "^8.19.1",
