--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
     "npm": "^8.19.1",
     "prism-react-renderer": "^1.2.1",
     "react": "^17.0.1",
-    "react-dom": "^17.0.1"
+    "react-dom": "^17.0.1",
+    "react-tagcloud": "^2.3.1"
   },
   "browserslist": {
     "production": [
