--- a/crowdin.yml
+++ b/crowdin.yml
@@ -15,8 +15,11 @@ preserve_hierarchy: true
 files:
   - source: "/i18n/en/**/*"
     translation: "/i18n/%two_letters_code%/**/%original_file_name%"
-  - source: "/docs/*"
-    translation: "/i18n/%two_letters_code%/docusaurus-plugin-content-docs/current/%original_file_name%"
+  - source: "/i18n/en/docusaurus-plugin-content-docs/*"
+    translation: "/i18n/%two_letters_code%/docusaurus-plugin-content-docs/%original_file_name%"
+  - source: "/i18n/en/docusaurus-theme-classic/*"
+    translation: "/i18n/%two_letters_code%/docusaurus-theme-classic/%original_file_name%"
+    
   - source: "/docs/00_intro/*"
     translation: "/i18n/%two_letters_code%/docusaurus-plugin-content-docs/current/00_intro/%original_file_name%"
   - source: "/docs/10_domains/*"
