--- a/.github/workflows/localisation.yml
+++ b/.github/workflows/localisation.yml
@@ -30,3 +30,5 @@ jobs:
 
     - name: Upload translations 
       run: npm run crowdin upload
+      env:
+          CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
