--- a/.github/workflows/localisation.yml
+++ b/.github/workflows/localisation.yml
@@ -1,34 +1,34 @@
 name: Localisation Workflow
 
 on:
-  push:
-    branches:
-      - localisation
-  pull_request:
-    branches:
-      - localisation
-  workflow_dispatch:
+    push:
+        branches:
+            - localisation
+    pull_request:
+        branches:
+            - localisation
+    workflow_dispatch:
 
 jobs:
-  build:
-    runs-on: ubuntu-latest
+    build:
+        runs-on: ubuntu-latest
+        if: github.ref == 'refs/heads/localisation' || github.event_name == 'workflow_dispatch'
+        steps:
+            - name: Checkout repository
+              uses: actions/checkout@v2
 
-    steps:
-    - name: Checkout repository
-      uses: actions/checkout@v2
+            - name: Set up Node.js
+              uses: actions/setup-node@v2
+              with:
+                  node-version: "lts/*"
 
-    - name: Set up Node.js
-      uses: actions/setup-node@v2
-      with:
-        node-version: 'lts/*'
+            - name: Install dependencies
+              run: npm install
 
-    - name: Install dependencies
-      run: npm install
+            - name: Write translations
+              run: npm run write-translations
 
-    - name: Write translations
-      run: npm run write-translations
-
-    - name: Upload translations 
-      run: npm run crowdin upload
-      env:
-          CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
+            - name: Upload translations
+              run: npm run crowdin upload
+              env:
+                  CROWDIN_PERSONAL_TOKEN: ${{ secrets.CROWDIN_PERSONAL_TOKEN }}
