--- a/package.json
+++ b/package.json
@@ -15,20 +15,23 @@
         "crowdin": "crowdin"
     },
     "dependencies": {
-        "@crowdin/cli": "^3.16.1",
-        "@docusaurus/core": "^3.1.0",
-        "@docusaurus/preset-classic": "^3.1.0",
+        "@crowdin/cli": "^3.18.0",
+        "@docusaurus/core": "^3.1.1",
+        "@docusaurus/preset-classic": "^3.1.1",
         "@easyops-cn/docusaurus-search-local": "^0.40.1",
         "@fontsource/ibm-plex-sans": "^5.0.18",
-        "@mdx-js/react": "^3.0.0",
+        "@mdx-js/react": "^3.0.1",
         "clsx": "^2.1.0",
         "docusaurus-plugin-matomo": "^0.0.8",
         "i": "^0.3.7",
-        "npm": "^10.3.0",
         "prism-react-renderer": "^2.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
         "react-tagcloud": "^2.3.3"
+    },
+    "devDependencies": {
+        "@docusaurus/module-type-aliases": "^3.1.1",
+        "@docusaurus/types": "3.1.1"
     },
     "browserslist": {
         "production": [
@@ -37,9 +40,12 @@
             "not op_mini all"
         ],
         "development": [
-            "last 1 chrome version",
-            "last 1 firefox version",
-            "last 1 safari version"
+            "last 3 chrome version",
+            "last 3 firefox version",
+            "last 5 safari version"
         ]
+    },
+    "engines": {
+        "node": ">=18.0"
     }
 }
