--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
         "clsx": "^2.1.0",
         "docusaurus-plugin-matomo": "^0.0.8",
         "i": "^0.3.7",
+        "moment": "^2.30.1",
         "prism-react-renderer": "^2.3.1",
         "react": "^18.2.0",
         "react-dom": "^18.2.0",
