--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
         "crowdin": "crowdin"
     },
     "dependencies": {
-        "@crowdin/cli": "^4.1.2",
-        "@docusaurus/core": "^3.5.2",
-        "@docusaurus/preset-classic": "^3.5.2",
-        "@easyops-cn/docusaurus-search-local": "^0.44.5",
+        "@crowdin/cli": "^4.3.0",
+        "@docusaurus/core": "^3.6.1",
+        "@docusaurus/faster": "^3.6.1",
+        "@docusaurus/preset-classic": "^3.6.1",
+        "@easyops-cn/docusaurus-search-local": "^0.45.0",
         "@fontsource/ibm-plex-sans": "^5.1.0",
-        "@mdx-js/react": "^3.0.1",
+        "@mdx-js/react": "^3.1.0",
         "clsx": "^2.1.1",
         "docusaurus-plugin-matomo": "^0.0.8",
         "i": "^0.3.7",
@@ -33,8 +34,8 @@
         "video-privacy": "^1.1.0"
     },
     "devDependencies": {
-        "@docusaurus/module-type-aliases": "^3.5.2",
-        "@docusaurus/types": "3.5.2"
+        "@docusaurus/module-type-aliases": "^3.6.1",
+        "@docusaurus/types": "3.6.1"
     },
     "browserslist": {
         "production": [
