--- a/package.json
+++ b/package.json
@@ -15,27 +15,27 @@
         "crowdin": "crowdin"
     },
     "dependencies": {
-        "@crowdin/cli": "^4.4.0",
-        "@docusaurus/core": "^3.6.3",
-        "@docusaurus/faster": "^3.6.3",
-        "@docusaurus/preset-classic": "^3.6.3",
-        "@easyops-cn/docusaurus-search-local": "^0.46.1",
-        "@fontsource/ibm-plex-sans": "^5.1.0",
+        "@crowdin/cli": "^4.6.1",
+        "@docusaurus/core": "^3.7.0",
+        "@docusaurus/faster": "^3.7.0",
+        "@docusaurus/preset-classic": "^3.7.0",
+        "@easyops-cn/docusaurus-search-local": "^0.49.1",
+        "@fontsource/ibm-plex-sans": "^5.2.5",
         "@mdx-js/react": "^3.1.0",
         "clsx": "^2.1.1",
         "docusaurus-plugin-matomo": "^0.0.8",
         "i": "^0.3.7",
         "moment": "^2.30.1",
-        "prism-react-renderer": "^2.4.0",
-        "react": "^18.3.1",
-        "react-dom": "^18.3.1",
+        "prism-react-renderer": "^2.4.1",
+        "react": "^18",
+        "react-dom": "^18",
         "react-tagcloud": "^2.3.3",
-        "use-immer": "^0.10.0",
+        "use-immer": "^0.11.0",
         "video-privacy": "^1.1.0"
     },
     "devDependencies": {
-        "@docusaurus/module-type-aliases": "^3.6.3",
-        "@docusaurus/types": "3.6.3"
+        "@docusaurus/module-type-aliases": "^3.7.0",
+        "@docusaurus/types": "^3.7.0"
     },
     "browserslist": {
         "production": [
