--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
         "@docusaurus/core": "^3.9.2",
         "@docusaurus/faster": "^3.9.2",
         "@docusaurus/preset-classic": "^3.9.2",
+        "@easyops-cn/docusaurus-search-local": "^0.52.1",
         "@fontsource/ibm-plex-sans": "^5.2.8",
         "@mdx-js/react": "^3.1.1",
         "clsx": "^2.1.1",
