--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
         "@crowdin/cli": "^4.11.0",
         "@docusaurus/core": "^3.9.2",
         "@docusaurus/faster": "^3.9.2",
+        "@docusaurus/plugin-sitemap": "^3.9.2",
         "@docusaurus/preset-classic": "^3.9.2",
         "@easyops-cn/docusaurus-search-local": "^0.52.1",
         "@fontsource/ibm-plex-sans": "^5.2.8",
