--- a/.gitignore
+++ b/.gitignore
@@ -21,7 +21,7 @@ npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 yarn.lock
-package-lock.json
+# package-lock.json
 # config for staging
 docusaurus.config.js
 .Rproj.user
