--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
 		"clsx": "^2.1.1",
 		"docusaurus-plugin-matomo": "^0.0.8",
 		"moment": "^2.30.1",
+		"nuka-carousel": "^8.2.0",
 		"prism-react-renderer": "^2.4.1",
 		"react": "^19",
 		"react-dom": "^19",
