--- a/crowdin.yml
+++ b/crowdin.yml
@@ -13,9 +13,11 @@ preserve_hierarchy: true
 # Files configuration
 #
 files:
-    - source: "/i18n/en/**/*"
-      translation: "/i18n/%two_letters_code%/**/%original_file_name%"
-    - source: "/docs/**/*"
-      translation: "/i18n/%two_letters_code%/docusaurus-plugin-content-docs/current/**/%original_file_name%"
-    - source: "/src/pages/*.md*"
-      translation: "/i18n/%two_letters_code%/docusaurus-plugin-content-pages/%original_file_name%"
+  - source: "/i18n/en/**/*"
+    translation: "/i18n/%two_letters_code%/**/%original_file_name%"
+  - source: "/docs/**/*"
+    ignore:
+      - "**/*.js"
+    translation: "/i18n/%two_letters_code%/docusaurus-plugin-content-docs/current/**/%original_file_name%"
+  - source: "/src/pages/*.md*"
+    translation: "/i18n/%two_letters_code%/docusaurus-plugin-content-pages/%original_file_name%"
