--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "serve": "docusaurus serve",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
-    "crowdin": "crowdin"
+    "crowdin": "crowdin",
+    "validate-content": "node scripts/validate-content.js",
+    "test:ci": "npm run write-translations && npm run crowdin download && npm run validate-content && npm run build"
   },
   "dependencies": {
     "@crowdin/cli": "^4.13.0",
@@ -34,7 +36,9 @@
   },
   "devDependencies": {
     "@docusaurus/module-type-aliases": "^3.9.2",
-    "@docusaurus/types": "^3.9.2"
+    "@docusaurus/types": "^3.9.2",
+    "glob": "^10.3.10",
+    "gray-matter": "^4.0.3"
   },
   "browserslist": {
     "production": [
