--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -15,7 +15,7 @@ jobs:
 
     strategy:
       matrix:
-        node-version: ["18.x"]
+        node-version: ["lts/*"]
 
     steps:
       - name: "Checkout code"
