--- a/.github/workflows/pr-validation.yml
+++ b/.github/workflows/pr-validation.yml
@@ -7,6 +7,7 @@ on:
       - "package.json"
       - "package-lock.json"
       - ".github/workflows/pr-validation.yml"
+  workflow_dispatch:
 
 jobs:
   validate:
